// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Input default 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #cfd1d7",
      "borderRadius": "7px",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "background": "transparent",
        "color": "#fff",
        "left": "15px",
        "padding": "0 3px",
        "position": "absolute",
        "top": "0",
        "transition": "all .4s ease, top 0s",
        "zIndex": 1,
      }
    }
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
      css={
        Object {
          "color": "#cfd1d7",
          "fontSize": "16px",
          "fontWeight": "500",
          "height": "16px",
          "lineHeight": "16px",
          "marginTop": "17px",
          "transition": "all .4s ease",
        }
      }
    >
      Test
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="input"
    autoComplete="off"
    css={
      Object {
        "background": "none",
        "border": "none",
        "boxSizing": "border-box",
        "fontSize": "16px",
        "outline": "none",
        "padding": "17px 14px",
        "position": "relative",
        "width": "100%",
        "zIndex": 2,
      }
    }
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    value=""
  />
</EmotionCssPropInternal>
`;

exports[`Input Input with error 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #D15130",
      "borderRadius": "7px",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="input"
    autoComplete="off"
    css={
      Object {
        "background": "none",
        "border": "none",
        "boxSizing": "border-box",
        "fontSize": "16px",
        "outline": "none",
        "padding": "17px 14px",
        "position": "relative",
        "width": "100%",
        "zIndex": 2,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="error value"
  />
</EmotionCssPropInternal>
`;

exports[`Input Input with valid value 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #9BC53D",
      "borderRadius": "7px",
      "boxSizing": "border-box",
      "marginBottom": "15px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="input"
    autoComplete="off"
    css={
      Object {
        "background": "none",
        "border": "none",
        "boxSizing": "border-box",
        "fontSize": "16px",
        "outline": "none",
        "padding": "17px 14px",
        "position": "relative",
        "width": "100%",
        "zIndex": 2,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="valid value"
  />
</EmotionCssPropInternal>
`;
